--- a/AirQuality/app/build.gradle
+++ b/AirQuality/app/build.gradle
@@ -49,4 +49,8 @@ dependencies {
     //retrofit library import
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //Google Map
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
 }
